--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+#root {
+  padding: 2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calculator-wrap {
   display: flex;
+  width: 18rem;
+  background-color: #bcd49f;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1rem;
+}
+.value-wrap {
+  height: 6rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.value-input {
+  height: 70%;
+  width: 90%;
+  background-color:#eef0e9;
+  font-size: 2rem;
+  font-weight: 800;
+  color: black;
+  border-radius: 1rem;
+  padding-right: 1rem;
+  text-align: right;
+}
+.button-wrap {
+  height: 18rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+}
+button {
+  background-color: #596430;
+  opacity: 0.8;
   color: white;
+  font-weight: 700;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 1rem;
 }
-
-.App-link {
-  color: #61dafb;
+button:active {
+  background-color: #98a07a;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.zero-button {
+  grid-column: 1/3;
+}
+.equal-button {
+  grid-row: 3/6;
+  grid-column: 4/5;
 }
