--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
+  border-radius: 1rem;
 }
 .value-wrap {
   height: 6rem;
@@ -34,7 +35,7 @@
   text-align: right;
 }
 .button-wrap {
-  height: 18rem;
+  height: 20rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 5px;
@@ -56,6 +57,10 @@ button:active {
   grid-column: 1/3;
 }
 .equal-button {
-  grid-row: 3/6;
+  grid-row: 4/6;
+  grid-column: 4/5;
+}
+.deleteBtn {
+  grid-row: 3/4;
   grid-column: 4/5;
 }
